Added version grpc request for ocp-project-api
