# internal/api/ocp-project-api/api.go
@@ -6,6 +6,7 @@ import (
 	"time"
 
 	"github.com/ozoncp/ocp-project-api/internal/api/checker"
+	"github.com/ozoncp/ocp-project-api/internal/config"
 	"github.com/ozoncp/ocp-project-api/internal/models"
 	"github.com/ozoncp/ocp-project-api/internal/producer"
 	"github.com/ozoncp/ocp-project-api/internal/prom"
@@ -22,6 +23,13 @@ type api struct {
 	desc.UnimplementedOcpProjectApiServer
 	projectStorage storage.ProjectStorage
 	logProducer    producer.Producer
+}
+
+func (a *api) Version(
+	ctx context.Context,
+	req *desc.VersionRequest,
+) (*desc.VersionResponse, error) {
+	return &desc.VersionResponse{Version: config.Version}, nil
 }
 
 func (a *api) ListProjects(
